# ingenuity-parking

./: README.md
.github/workflows/: backend-tests.yml  frontend-tests.yml
backend/: README.md  main.py  pyproject.toml
backend/core/: settings.py  urls.py
backend/parking/: admin.py  models.py  permissions.py
backend/parking/api/v1/: serializers.py  urls.py  viewsets.py
backend/parking/migrations/: 0001_initial.py  0002_alter_parkinglocation_options_and_more.py  0003_alter_parkingreservation_status.py  0004_alter_parkingreservation_status.py
backend/parking/tests/: conftest.py  test_endpoints.py  test_reservation.py  test_smoke.py
frontend/: README.md  package-lock.json  package.json  tsconfig.node.json
frontend/src/: main.tsx
frontend/src/api/: auth.tsx  mockData.tsx  queries.tsx  schemas.tsx
frontend/src/components/: AdminLoginForm.tsx  DashboardLayout.tsx  LocationForm.tsx  LoginForm.tsx  RequireAuth.tsx  ReservationForm.tsx
frontend/src/components/dashboard/: DashboardAvatar.tsx  DashboardParkingGroup.tsx  DashboardSidebar.tsx  DashboardUserGroup.tsx
frontend/src/pages/: AdminHome.tsx  AdminLogin.tsx  AdminProfile.tsx  LocationList.tsx  Login.tsx  ReservationList.tsx  UserList.tsx
frontend/tests/: smoke.test.ts
